k8s/litecart.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: litecart
  namespace: shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: litecart
  template:
    metadata:
      labels:
        app: litecart
    spec:
      nodeSelector:
        type: sg
      containers:
      - name: litecart
        image: shurco/litecart:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: litecart-storage
          mountPath: /lc_base
          subPath: lc_base 
        - name: litecart-storage
          mountPath: /lc_digitals
          subPath: lc_digitals
        - name: litecart-storage
          mountPath: /lc_uploads
          subPath: lc_uploads
        - name: litecart-storage
          mountPath: /site
          subPath: site
      volumes:
      - name: litecart-storage
        persistentVolumeClaim:
          claimName: litecart-pvc

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: litecart-ingress
  namespace: shop
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - domain
    secretName: litecart-tls
  rules:
  - host: domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: litecart-service
            port:
              number: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: litecart-service
  namespace: shop
spec:
  selector:
    app: litecart
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
